<?xml version="1.0"?>
<package format="2">
  <name>vfh_local_planner</name>
  <version>0.0.0</version>
  <description>The vfh_local_planner package</description>

  <maintainer email="limpert@fh-aachen.de">Nicolas Limpert</maintainer>
  <author email="kollmitz@todo.todo">kollmitz</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
    <nav_core plugin="${prefix}/blp_plugin.xml" />

  </export>

</package>
